src/snapshots/jj_pr__tests__log@stageleft-71.json.gz.snap
---
source: src/tests.rs
expression: "render_log(&f, false)"
input_file: src/fixtures/stageleft-71.json.gz
---
[1m[32m@[0m  [1m[35mmlsuslpnrwvo[0m [34m83036e391ca0[0m [1m[35mmingwei/fnmut[0m [1m[35msandbox-a4601e4d-b68e-44aa-b04a-8e0e9fcd756a[0m [1m[36m]8;;https://github.com/hydro-project/stageleft/pull/76PR #76]8;;[0m [33mDraft[0m
│  feat: add FnMut support to stageleft splice methods and type hints
○  [1m[35mznypwxvsxtqo[0m [34m843dba9bb11c[0m [1m[35msandbox-5d382e2d-58bd-43a1-84d8-d42e347b80b5[0m [1m[36m]8;;https://github.com/hydro-project/stageleft/pull/74PR #74]8;;[0m [32mReady[0m
│  feat(stageleft): fix q! span attribution via hidden macro_rules! export
[1m[36m◆[0m  [1m[35mtyyrytrpowyt[0m [34mc0e1bc1f4d11[0m [1m[32mtrunk()[0m
│  chore: Release
[2m~[0m  [2m(elided revisions)[0m
