src/snapshots/jj_pr__tests__log_reversed_non_pr_siblings.snap
---
source: src/tests.rs
expression: "render_log(&f, false, true)"
---
[2m~[0m  [2m(elided revisions)[0m
[1m[36m◆[0m  [1m[35mchtrunk[0m [34mtrunk[0m [1m[35mmain[0m [1m[32mtrunk()[0m
│  trunk
○  [1m[35mcha1[0m [34ma1[0m [1m[35mfeat-a[0m [1m[36m]8;;https://github.com/test/repo/pull/1PR #1]8;;[0m [33mDraft[0m
│  a
○  [1m[35mchb1[0m [34mb1[0m [1m[35mfeat-b[0m [1m[36m]8;;https://github.com/test/repo/pull/2PR #2]8;;[0m [33mDraft[0m
   b
