src/snapshots/jj_pr__tests__log_wraps_long_description.snap
---
source: src/tests.rs
assertion_line: 1123
expression: "render_log_wrapped(&f, false, false, Some(60))"
---
○  [1m[35mch2[0m [34mc2[0m [1m[35mfeat[0m [1m[36m]8;;https://github.com/test/repo/pull/1PR #1]8;;[0m [33mDraft[0m
│  a somewhat long first line of the commit description that
│  also needs wrapping
○  [1m[35mch1[0m [34mc1[0m [1m[36m]8;;https://github.com/test/repo/pull/1PR #1]8;;[0m [33mDraft[0m
│  first
│ [1m[36m◆[0m  [1m[35mchtrunk[0m [34mtrunk[0m [1m[35mmain[0m [1m[32mtrunk()[0m
│    trunk
[2m~[0m  [2m(elided revisions)[0m
