src/snapshots/jj_pr__tests__merge_child_show.snap
---
source: src/tests.rs
expression: render_show(&f)
---
○    [1m[36m]8;;https://github.com/test/repo/pull/3PR #3]8;;[0m*  [33mDraft[0m  [1m[35mfeat-c[0m
├─╮  PR #3
│ ○  [1m[36m]8;;https://github.com/test/repo/pull/2PR #2]8;;[0m  [33mDraft[0m  [1m[35mfeat-b[0m
│ │  PR #2
○ │  [1m[36m]8;;https://github.com/test/repo/pull/1PR #1]8;;[0m  [33mDraft[0m  [1m[35mfeat-a[0m
├─╯  PR #1
[1m[36m◆[0m  [1m[32mtrunk()[0m
[1m[36m◆[0m  [1m[32mroot()::[0m
